--- a/privacy.html
+++ b/privacy.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Privacy Policy – HabitRig</title>
+  <link rel="icon" type="image/png" href="/favicon.png">
   <style>
     * {
       margin: 0;
@@ -537,4 +538,5 @@
     </div>
   </div>
 </body>
+
 </html>
